mobile version updated

--- a/mobile/Informal.html
+++ b/mobile/Informal.html
@@ -164,11 +164,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
-                <li class="active"><a href="Informal.html">Informal Events</a></li>
-                <li><a href="contact.html">Contacts</a></li>
+                <li  class="active"><a href="Informal.html">Informal Events</a></li>
+                <!-- <li><a href="contact.html">Contacts</a></li> -->
+                <li><a href="sponsors.html">SPONSORS</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li ><a href="sponsors.html">SPONSORS</a></li>
-                <!-- <li><a href="team.html">Team</a></li> -->
               </ul>
             </nav>
           </div>
@@ -178,16 +177,19 @@
       </div>
     </header>
 
-  <div class="site-section site-hero inner">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-10">
-          <span class="d-block mb-3 caption" data-aos="fade-up">Events</span>
-          <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Informal Events</h1>
-        </div>
-      </div>
+  <br><br><br><br>
+  <!-- <div  class="site-section site-hero inner"> -->
+  <!-- <div  class="container"> -->
+  <div " class=" row align-items-center">
+    <div class="col-md-10">
+      <span class="d-block mb-3 caption" data-aos="fade-up">&nbsp;&nbsp;&nbsp;Events</span>
+      <h1
+        style=" margin-left:4%;background: linear-gradient(to right, #c70039, #ff5733 70%);-webkit-text-fill-color: transparent;-webkit-background-clip: text;"
+        class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Informal Events</h1>
     </div>
   </div>
+  <!-- </div> -->
+  <!-- </div> -->
 
   <div class="informals" id="informals">
     <div class="container">
@@ -304,49 +306,34 @@
     </div>
   </div>
 
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-            <p>IIIT LUCKNOW Fest</p>
-          </div>
-          <div class="col-md-3 ml-auto">
-            <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
-            <ul class="list-unstyled">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Formal</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Contact Us</a></li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
-            <p>
-              <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-              <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-              <a href="#" class="p-2"><span class="icon-youtube"></span></a>
-              <a href="#" class="p-2"><span class="icon-instagram"></span></a>
-            </p>
-          </div>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-3 ml-auto">
+          <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="formal.html">Formal Events</a></li>
+            <li  class="active"><a href="Informal.html">Informal Events</a></li>
+            <!-- <li><a href="contact.html">Contacts</a></li> -->
+            <li><a href="sponsors.html">SPONSORS</a></li>
+            <li><a href="team.html">Team</a></li>
+          </ul>
         </div>
-        <div class="row">
-
-          <div class="col-md-12 text-center">
-            <div class="border-top pt-5">
-              <p>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-                with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="#!"
-                  >WebTeam@Equinox</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              </p>
-            </div>
-          </div>
+        <div class="col-md-4">
+          <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
+          <p>
+            <a href="https://www.facebook.com/Equinox-IIIT-Lucknow-106395987502181/?modal=admin_todo_tour"
+              class="p-2 pl-0"><span class="icon-facebook"></span></a>
+            <a href="https://twitter.com/Equinoxiiitl?s=08" class="p-2"><span class="icon-twitter"></span></a>
+            <a href="https://www.instagram.com/equinoxiiitl/?igshid=1di0akdiuv3c7" class="p-2"><span
+                class="icon-instagram"></span></a>
+          </p>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
   </div>
 
