--- a/mobile/sponsors.html
+++ b/mobile/sponsors.html
@@ -51,13 +51,12 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li ><a href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
                 <li><a href="Informal.html">Informal Events</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li><a href="team.html">Team</a></li>
+                <!-- <li><a href="contact.html">Contacts</a></li> -->
                 <li class="active"><a href="sponsors.html">SPONSORS</a></li>
-                <!-- <li><a href="team.html">Team</a></li> -->
+                <li><a href="team.html">Team</a></li>
               </ul>
             </nav>
           </div>
@@ -77,9 +76,6 @@
             <h2 class="d-block mb-4 aos-init aos-animate"><br><br><br>Sponsors</h2>
           </div>
         </div>
-        <div class="col-lg-6 mt-5 pl-lg-5 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-        <p></p>
-        </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="200">
@@ -91,12 +87,12 @@
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="400">
           <img src="https://getsetfoss.tech/assets/img/code.png" alt="Image" class="img-fluid">
         </div>
-        <div style="margin-left: 41%;"class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="400">
+        <div style="margin-left: 0%;"class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="400">
           <img src="https://hackofiesta.github.io/assets/images/axios.png" alt="Image" class="img-fluid">
         </div>
         <div class="contact-form">
-          <h1><br><br><br>Want to sponsor us? Shoot us an E-mail</h1>
-          <a href="mailto:equinox@iiitl.ac.in">equinox@iiitl.ac.in</a>
+          <h1 style="margin-left:5% ;"><br><br><br> Want to sponsor us? Shoot us an E-mail</h1>
+          <a style="margin-left:5% ;" href="mailto:equinox@iiitl.ac.in">&nbsp;&nbsp;equinox@iiitl.ac.in</a>
         </div>
 
       </div>
@@ -106,50 +102,35 @@
 
 
 
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-md-4">
-          <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-          <p>Tech fest event of IIIT Lucknow</p>
-        </div>
-        <div class="col-md-3 ml-auto">
-          <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
-          <ul class="list-unstyled">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Formal Events</a></li>
-            <li><a href="#">InFormal Events</a></li>
-            <!-- <li><a href="#">Gallery</a></li> -->
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
-          <p>
-            <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-            <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-            <a href="#" class="p-2"><span class="icon-youtube"></span></a>
-            <a href="#" class="p-2"><span class="icon-instagram"></span></a>
-          </p>
-        </div>
+<footer class="site-footer">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-md-3 ml-auto">
+        <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
+        <ul class="list-unstyled">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="formal.html">Formal Events</a></li>
+          <li class="active"><a href="Informal.html">Informal Events</a></li>
+          <!-- <li><a href="contact.html">Contacts</a></li> -->
+          <li><a href="sponsors.html">SPONSORS</a></li>
+          <li><a href="team.html">Team</a></li>
+        </ul>
       </div>
-      <div class="row">
-
-        <div class="col-md-12 text-center">
-          <div class="border-top pt-5">
-            <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright ©
-              <script>document.write(new Date().getFullYear());</script>2019 All rights reserved | This template is made
-              with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="#!"
-                >WebTeam@Equinox</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-        </div>
+      <div class="col-md-4">
+        <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
+        <p>
+          <a href="https://www.facebook.com/Equinox-IIIT-Lucknow-106395987502181/?modal=admin_todo_tour"
+            class="p-2 pl-0"><span class="icon-facebook"></span></a>
+          <a href="https://twitter.com/Equinoxiiitl?s=08" class="p-2"><span class="icon-twitter"></span></a>
+          <a href="https://www.instagram.com/equinoxiiitl/?igshid=1di0akdiuv3c7" class="p-2"><span
+              class="icon-instagram"></span></a>
+        </p>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
+
 
 
 
