--- a/mobile/team.html
+++ b/mobile/team.html
@@ -50,14 +50,13 @@
                 <div class="col-12 col-md-10 d-none d-xl-block">
                   <nav class="site-navigation position-relative text-right" role="navigation">
                     <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About Us</a></li>
-                      <li><a href="formal.html">Formal Events</a></li>
-                      <li><a href="Informal.html">Informal Events</a></li>
-                      <li><a href="contact.html">Contacts</a></li>
-                      <li class="active"><a href="team.html">Team</a></li>
-                      <li ><a href="sponsors.html">SPONSORS</a></li>
-                      <!-- <li><a href="team.html">Team</a></li> -->
+                    <li><a href="index.html">Home</a></li>
+                    <li ><a href="about.html">About Us</a></li>
+                    <li><a href="formal.html">Formal Events</a></li>
+                    <li><a href="Informal.html">Informal Events</a></li>
+                    <!-- <li><a href="contact.html">Contacts</a></li> -->
+                    <li><a href="sponsors.html">SPONSORS</a></li>
+                    <li class="active"><a href="team.html">Team</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -152,35 +151,35 @@
         </div>
     </div>
 
-        <footer class="site-footer">
+    <footer class="site-footer">
         <div class="container">
             <div class="row mb-5">
-                <div class="col-md-4">
-                    <h2 class="footer-heading text-uppercase mb-4">About Event</h2>
-                    <p>Tech fest event of IIIT Lucknow</p>
-                </div>
                 <div class="col-md-3 ml-auto">
                     <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
                     <ul class="list-unstyled">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Formal Events</a></li>
-                        <li><a href="#">InFormal Events</a></li>
-                        <!-- <li><a href="#">Gallery</a></li> -->
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="formal.html">Formal Events</a></li>
+                        <li class="active"><a href="Informal.html">Informal Events</a></li>
+                        <!-- <li><a href="contact.html">Contacts</a></li> -->
+                        <li><a href="sponsors.html">SPONSORS</a></li>
+                        <li><a href="team.html">Team</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
                     <p>
-                        <a href="#" class="p-2 pl-0"><span class="icon-facebook"></span></a>
-                        <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-                        <a href="#" class="p-2"><span class="icon-youtube"></span></a>
-                        <a href="#" class="p-2"><span class="icon-instagram"></span></a>
+                        <a href="https://www.facebook.com/Equinox-IIIT-Lucknow-106395987502181/?modal=admin_todo_tour"
+                            class="p-2 pl-0"><span class="icon-facebook"></span></a>
+                        <a href="https://twitter.com/Equinoxiiitl?s=08" class="p-2"><span class="icon-twitter"></span></a>
+                        <a href="https://www.instagram.com/equinoxiiitl/?igshid=1di0akdiuv3c7" class="p-2"><span
+                                class="icon-instagram"></span></a>
                     </p>
                 </div>
             </div>
         </div>
     </footer>
+
 
 
 
