--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       <div class="cube"></div>
     </div>
     <div class="site-wrap">
-      <div class="panel-wrap animate--shrink">
+        <!-- animate--shrink -->
+      <div class="panel-wrap">
         <div class="panel" data-x-pos="0" data-y-pos="0">
           <span class="panel__nav panel__nav--up js-up">About</span>
           <span class="panel__nav panel__nav--left js-left">Formal Events</span>
@@ -812,11 +813,11 @@
           <span class="panel__nav panel__nav--down js-down">Team</span>
           <div class="panel-content" style="justify-content: center">
             <h1>Formal Events</h1>
-            <div class="informals" id="informals">
+            <div class="informals" id="informals" style="">
               <div
                 class="container"
                 id="hackofiesta"
-                style="background: url(./assets/img/events/Hackofiesta.png );    background-color: black;background-size: cover;"
+                style="background: url(./assets/img/events/Hackofiesta.png );    background-color: black;background-size: contain;"
               >
                 <div class="overlay">
                   <div class="items"></div>
@@ -871,39 +872,10 @@
                   </div>
                 </div>
               </div>
-              <div class="container">
-                <div class="overlay">
-                  <div class="items"></div>
-                  <div class="items head">
-                    <p>Equinox</p>
-                    <hr />
-                  </div>
-                  <div class="items price">
-                    <p class="new">Timings</p>
-                  </div>
-                  <div class="items cart">
-                    <i class="fas fa-info"></i>
-                    <span>More information</span>
-                  </div>
-                </div>
-              </div>
-              <div class="container">
-                <div class="overlay">
-                  <div class="items"></div>
-                  <div class="items head">
-                    <p>Equinox</p>
-                    <hr />
-                  </div>
-                  <div class="items price">
-                    <p class="new">Timings</p>
-                  </div>
-                  <div class="items cart">
-                    <i class="fas fa-info"></i>
-                    <span>More information</span>
-                  </div>
-                </div>
-              </div>
-              <div class="container">
+              <div
+                class="container"
+                style="background: url(./assets/img/events/freshers_cup.png);    background-color: black;background-size: cover;"
+              >
                 <div class="overlay">
                   <div class="items"></div>
                   <div class="items head">
@@ -938,10 +910,10 @@
                   <h3 class="title">Divy Khare</h3>
                   <div class="desc">Festival Lead</div>
                   <div class="card-footer">
-                    <a href="#"><i class="far fa-envelope"></i></a
-                    ><a href="tel:+917007238057"
+                    <a href="mailto:lit2017001@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="#"><i class="fab fa-github"></i></a>
+                    ><a href="https://www.linkedin.com/in/divy-khare-63a398172/"><i class="fab fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -952,10 +924,10 @@
                   <h3 class="title">Vaibhav Gupta</h3>
                   <div class="desc">Festival Lead</div>
                   <div class="card-footer">
-                    <a href="#"><i class="far fa-envelope"></i></a
-                    ><a href="tel:+917007238057"
+                    <a href="mailto:lit2017006@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="#"><i class="fab fa-github"></i></a>
+                    ><a href="https://www.linkedin.com/in/vaibhavgupta79/"><i class="fab fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -966,10 +938,10 @@
                   <h3 class="title">Govind Dixit</h3>
                   <div class="desc">Festival Lead</div>
                   <div class="card-footer">
-                    <a href="#"><i class="far fa-envelope"></i></a
-                    ><a href="tel:+917007238057"
+                    <a href="mailto:lit2017018@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="#"><i class="fab fa-github"></i></a>
+                    ><a href="https://www.linkedin.com/in/govind-dixit-58708413a/"><i class="fab fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -980,10 +952,10 @@
                   <h3 class="title">Saksham Varshney</h3>
                   <div class="desc">Festival Coordinator</div>
                   <div class="card-footer">
-                    <a href="#"><i class="far fa-envelope"></i></a
-                    ><a href="tel:+917007238057"
+                    <a href="mailto:lit2019029@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="#"><i class="fab fa-github"></i></a>
+                    ><a href="https://www.linkedin.com/in/saksham-varshney-668ba557/"><i class="fab fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -994,10 +966,10 @@
                   <h3 class="title">Nishant Raj Lather</h3>
                   <div class="desc">Festival Coordinator</div>
                   <div class="card-footer">
-                    <a href="#"><i class="far fa-envelope"></i></a
-                    ><a href="tel:+917007238057"
+                    <a href="mailto:lit2018038@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="#"><i class="fab fa-github"></i></a>
+                    ><a href="https://www.linkedin.com/in/nishant-raj-lather-9542b5123/"><i class="fab fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -1012,8 +984,11 @@
           <span class="panel__nav panel__nav--left js-left">Sponsors</span>
           <div class="panel-content" style="justify-content: center">
             <h1>Informal Events</h1>
-            <div class="informals" id="informals">
-              <div class="container">
+            <div class="informals" id="informals" style="">
+              <div
+                class="container"
+                style="background: url(./assets/img/events/code_arena.png);    background-color: black;background-size: cover;"
+              >
                 <div class="overlay">
                   <div class="items"></div>
                   <div class="items head">
@@ -1029,7 +1004,10 @@
                   </div>
                 </div>
               </div>
-              <div class="container">
+              <div
+                class="container"
+                style="background: url(./assets/img/events/code_byte.png);    background-color: black;background-size: cover;"
+              >
                 <div class="overlay">
                   <div class="items"></div>
                   <div class="items head">
@@ -1045,7 +1023,10 @@
                   </div>
                 </div>
               </div>
-              <div class="container">
+              <div
+                class="container"
+                style="background: url(./assets/img/events/gamenight.png);    background-color: black;background-size: cover;"
+              >
                 <div class="overlay">
                   <div class="items"></div>
                   <div class="items head">
@@ -1061,7 +1042,10 @@
                   </div>
                 </div>
               </div>
-              <div class="container">
+              <div
+                class="container"
+                style="background: url(./assets/img/events/quickfingers.png);    background-color: black;background-size: cover;"
+              >
                 <div class="overlay">
                   <div class="items"></div>
                   <div class="items head">
@@ -1077,23 +1061,10 @@
                   </div>
                 </div>
               </div>
-              <div class="container">
-                <div class="overlay">
-                  <div class="items"></div>
-                  <div class="items head">
-                    <p>Equinox</p>
-                    <hr />
-                  </div>
-                  <div class="items price">
-                    <p class="new">Timings</p>
-                  </div>
-                  <div class="items cart">
-                    <i class="fas fa-info"></i>
-                    <span>More information</span>
-                  </div>
-                </div>
-              </div>
-              <div class="container">
+              <div
+                class="container"
+                style="background: url(./assets/img/events/tech_hunt.png);    background-color: black;background-size: cover;"
+              >
                 <div class="overlay">
                   <div class="items"></div>
                   <div class="items head">
@@ -1139,36 +1110,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flip-card">
-                <div class="flip-card-inner">
-                  <div class="flip-card-front">
-                    <img
-                      src="./assets/img/workshops/coming_soon.jpg"
-                      alt="workshop"
-                    />
-                  </div>
-                  <div class="flip-card-back">
-                    <h1>Equinox</h1>
-                    <p>7 February 2020</p>
-                    <p>9:00 PM</p>
-                  </div>
-                </div>
-              </div>
-              <div class="flip-card">
-                <div class="flip-card-inner">
-                  <div class="flip-card-front">
-                    <img
-                      src="./assets/img/workshops/coming_soon.jpg"
-                      alt="workshop"
-                    />
-                  </div>
-                  <div class="flip-card-back">
-                    <h1>Equinox</h1>
-                    <p>7 February 2020</p>
-                    <p>9:00 PM</p>
-                  </div>
-                </div>
-              </div>
+
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -1226,6 +1168,16 @@
           <span class="panel__nav panel__nav--left-down js-down js-left"
             >Formal Events</span
           >
+          <span class="panel__nav panel__nav--up" style="opacity: 1;"
+            >Follow us on Social Media:
+            <a href="#!" target="blank">
+              <i class="fab fa-facebook-square"></i
+            ></a>
+            <a href="#!" target="blank"
+              ><i class="fab fa-twitter-square"></i
+            ></a>
+            <a href="#!" target="blank"><i class="fab fa-linkedin"></i></a>
+          </span>
           <span class="panel__nav panel__nav--down js-down">Main</span>
           <div
             class="panel-content"
