sponsors and events updates

--- a/mobile/team.html
+++ b/mobile/team.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -137,7 +137,7 @@
                     data-aos-delay="500">
                     <div class="testimony text-center">
                         <figure>
-                            <img src="https://axios.iiitl.ac.in/wings/competitiveCoding/images/team/nishant.jpg"
+                            <img src="images/nishant.jpg"
                                 alt="Image" class="img-fluid">
                         </figure>
                         <blockquote>
