--- a/mobile/contact.html
+++ b/mobile/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
