--- a/mobile/index.html
+++ b/mobile/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="./css/bitsbybits.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="./css/cube.css">
   </head>
   <body>
