--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="cube"></div>
     </div>
     <div class="site-wrap">
-        <!-- animate--shrink -->
+      <!-- animate--shrink -->
       <div class="panel-wrap">
         <div class="panel" data-x-pos="0" data-y-pos="0">
           <span class="panel__nav panel__nav--up js-up">About</span>
@@ -910,10 +910,13 @@
                   <h3 class="title">Divy Khare</h3>
                   <div class="desc">Festival Lead</div>
                   <div class="card-footer">
-                    <a href="mailto:lit2017001@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    <a href="mailto:lit2017001@iiitl.ac.in"
+                      ><i class="far fa-envelope"></i></a
                     ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="https://www.linkedin.com/in/divy-khare-63a398172/"><i class="fab fa-linkedin"></i></a>
+                    ><a href="https://www.linkedin.com/in/divy-khare-63a398172/"
+                      ><i class="fab fa-linkedin"></i
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -924,10 +927,13 @@
                   <h3 class="title">Vaibhav Gupta</h3>
                   <div class="desc">Festival Lead</div>
                   <div class="card-footer">
-                    <a href="mailto:lit2017006@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    <a href="mailto:lit2017006@iiitl.ac.in"
+                      ><i class="far fa-envelope"></i></a
                     ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="https://www.linkedin.com/in/vaibhavgupta79/"><i class="fab fa-linkedin"></i></a>
+                    ><a href="https://www.linkedin.com/in/vaibhavgupta79/"
+                      ><i class="fab fa-linkedin"></i
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -938,10 +944,14 @@
                   <h3 class="title">Govind Dixit</h3>
                   <div class="desc">Festival Lead</div>
                   <div class="card-footer">
-                    <a href="mailto:lit2017018@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    <a href="mailto:lit2017018@iiitl.ac.in"
+                      ><i class="far fa-envelope"></i></a
                     ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="https://www.linkedin.com/in/govind-dixit-58708413a/"><i class="fab fa-linkedin"></i></a>
+                    ><a
+                      href="https://www.linkedin.com/in/govind-dixit-58708413a/"
+                      ><i class="fab fa-linkedin"></i
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -952,10 +962,14 @@
                   <h3 class="title">Saksham Varshney</h3>
                   <div class="desc">Festival Coordinator</div>
                   <div class="card-footer">
-                    <a href="mailto:lit2019029@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    <a href="mailto:lit2019029@iiitl.ac.in"
+                      ><i class="far fa-envelope"></i></a
                     ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="https://www.linkedin.com/in/saksham-varshney-668ba557/"><i class="fab fa-linkedin"></i></a>
+                    ><a
+                      href="https://www.linkedin.com/in/saksham-varshney-668ba557/"
+                      ><i class="fab fa-linkedin"></i
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -966,10 +980,14 @@
                   <h3 class="title">Nishant Raj Lather</h3>
                   <div class="desc">Festival Coordinator</div>
                   <div class="card-footer">
-                    <a href="mailto:lit2018038@iiitl.ac.in"><i class="far fa-envelope"></i></a
+                    <a href="mailto:lit2018038@iiitl.ac.in"
+                      ><i class="far fa-envelope"></i></a
                     ><a href="tel:+918094123615"
                       ><i class="fas fa-phone-alt"></i></a
-                    ><a href="https://www.linkedin.com/in/nishant-raj-lather-9542b5123/"><i class="fab fa-linkedin"></i></a>
+                    ><a
+                      href="https://www.linkedin.com/in/nishant-raj-lather-9542b5123/"
+                      ><i class="fab fa-linkedin"></i
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -1099,14 +1117,14 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <img
-                      src="./assets/img/workshops/coming_soon.jpg"
+                      src="./assets/img/workshops/shop1.png"
                       alt="workshop"
                     />
                   </div>
                   <div class="flip-card-back">
-                    <h1>Equinox</h1>
-                    <p>7 February 2020</p>
-                    <p>9:00 PM</p>
+                    <h1>IIIT Lucknow</h1>
+                    <p>18 January 2020</p>
+                    <p>11:00 AM</p>
                   </div>
                 </div>
               </div>
@@ -1115,14 +1133,14 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <img
-                      src="./assets/img/workshops/coming_soon.jpg"
+                      src="./assets/img/workshops/shop2.png"
                       alt="workshop"
                     />
                   </div>
                   <div class="flip-card-back">
-                    <h1>Equinox</h1>
-                    <p>7 February 2020</p>
-                    <p>9:00 PM</p>
+                    <h1>IIIT Lucknow</h1>
+                    <p>18 January 2020</p>
+                    <p>11:00 AM</p>
                   </div>
                 </div>
               </div>
@@ -1131,30 +1149,14 @@
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <img
-                      src="./assets/img/workshops/coming_soon.jpg"
+                      src="./assets/img/workshops/shop3.png"
                       alt="workshop"
                     />
                   </div>
                   <div class="flip-card-back">
-                    <h1>Equinox</h1>
-                    <p>7 February 2020</p>
-                    <p>9:00 PM</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="flip-card">
-                <div class="flip-card-inner">
-                  <div class="flip-card-front">
-                    <img
-                      src="./assets/img/workshops/coming_soon.jpg"
-                      alt="workshop"
-                    />
-                  </div>
-                  <div class="flip-card-back">
-                    <h1>Equinox</h1>
-                    <p>7 February 2020</p>
-                    <p>9:00 PM</p>
+                    <h1>IIIT Lucknow</h1>
+                    <p>18 January 2020</p>
+                    <p>11:00 AM</p>
                   </div>
                 </div>
               </div>
@@ -1170,13 +1172,13 @@
           >
           <span class="panel__nav panel__nav--up" style="opacity: 1;"
             >Follow us on Social Media:
-            <a href="#!" target="blank">
+            <a href="https://www.facebook.com/Equinox-IIIT-Lucknow-106395987502181/?modal=admin_todo_tour" target="blank">
               <i class="fab fa-facebook-square"></i
             ></a>
-            <a href="#!" target="blank"
+            <a href="https://twitter.com/Equinoxiiitl?s=08" target="blank"
               ><i class="fab fa-twitter-square"></i
             ></a>
-            <a href="#!" target="blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/equinox-iiitl/about" target="blank"><i class="fab fa-linkedin"></i></a>
           </span>
           <span class="panel__nav panel__nav--down js-down">Main</span>
           <div
