created workshop section(mobile)

--- a/mobile/sponsors.html
+++ b/mobile/sponsors.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
-
+<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -51,10 +51,11 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
-                <li ><a href="about.html">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
                 <li><a href="Informal.html">Informal Events</a></li>
-                <!-- <li><a href="contact.html">Contacts</a></li> -->
+                <li><a href="workshop.html">Workshops</a></li>
+                <!-- <li><a href="contact.html">Contacts</a></li></li>> -->
                 <li class="active"><a href="sponsors.html">SPONSORS</a></li>
                 <li><a href="team.html">Team</a></li>
               </ul>
@@ -68,36 +69,51 @@
   </div>
   <!-- Our sponsors -->
 
-  <div class="site-section">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-lg-4 ">
-          <div class="site-section-heading aos-init aos-animate" data-aos="fade-up">
-            <h2 class="d-block mb-4 aos-init aos-animate"><br><br><br>Sponsors</h2>
-          </div>
+<div class="site-section">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-lg-4 ">
+        <div class="site-section-heading aos-init aos-animate" data-aos="fade-up">
+          <h2 class="d-block mb-4 aos-init aos-animate"><br><br><br>Sponsors</h2>
         </div>
       </div>
-      <div class="row mb-5">
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="200">
-          <img src="https://hackofiesta.github.io/assets/images/sponsor-logo-1.png" alt="Image" class="img-fluid">
+    </div>
+    <div style="margin-top:-12%" class="sponsors">
+      <div
+        style="padding-top: 8%;padding-bottom: 4%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
+        class="sponsor-category">
+        <h2 style="color: #303033; width: 50%; position: relative;left: 45%; transform: translate(-50%);">Platinum
+          Sponsors</h2>
+        <div class="sponsor-row">
+          <img style="width: 50%; position: relative;left: 50%; transform: translate(-50%);"
+            src="https://hackofiesta.github.io/assets/images/sponsor-logo-1.png">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="https://hackofiesta.github.io/assets/images/sponsor-logo-2.png">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="https://getsetfoss.tech/assets/img/code.png">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="https://hackofiesta.github.io/assets/images/axios.png">
         </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="300">
-          <img src="https://hackofiesta.github.io/assets/images/sponsor-logo-2.png" alt="Image" class="img-fluid">
+      </div>
+      <br><br>
+      <div style="padding-top: 8%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
+        class="sponsor-category">
+        <h2
+          style="margin-top:-7%; color: #303033;width: 50%; position: relative;left: 45%; transform: translate(-50%);">
+          Patreon Sponsors</h2>
+        <div class="sponsor-row">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="https://hackofiesta.github.io/assets/images/sponsor-logo-3.png">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="https://hackofiesta.github.io/assets/images/sponsor-logo-4.png">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="https://static.balsamiq.cloud/1345/landing/images/2bcadf409f1d0ebd680e0f127db3aea4.svg"
+            style="background-color: #df0000;padding: 10px;border-radius: 15px;">
         </div>
-        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="400">
-          <img src="https://getsetfoss.tech/assets/img/code.png" alt="Image" class="img-fluid">
-        </div>
-        <div style="margin-left: 0%;"class="col-md-6 col-lg-4 mb-5 mb-lg-0 aos-init aos-animate" data-aos="fade" data-aos-delay="400">
-          <img src="https://hackofiesta.github.io/assets/images/axios.png" alt="Image" class="img-fluid">
-        </div>
-        <div class="contact-form">
-          <h1 style="margin-left:5% ;"><br><br><br> Want to sponsor us? Shoot us an E-mail</h1>
-          <a style="margin-left:5% ;" href="mailto:equinox@iiitl.ac.in">&nbsp;&nbsp;equinox@iiitl.ac.in</a>
-        </div>
-
       </div>
     </div>
   </div>
+</div>
 
 
 
@@ -111,8 +127,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="formal.html">Formal Events</a></li>
-          <li class="active"><a href="Informal.html">Informal Events</a></li>
-          <!-- <li><a href="contact.html">Contacts</a></li> -->
+          <li><a href="Informal.html">Informal Events</a></li>
+          <li><a href="workshop.html">Workshops</a></li>
           <li><a href="sponsors.html">SPONSORS</a></li>
           <li><a href="team.html">Team</a></li>
         </ul>
