--- a/mobile/team.html
+++ b/mobile/team.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -50,13 +50,14 @@
                 <div class="col-12 col-md-10 d-none d-xl-block">
                   <nav class="site-navigation position-relative text-right" role="navigation">
                     <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                    <li><a href="index.html">Home</a></li>
-                    <li ><a href="about.html">About Us</a></li>
-                    <li><a href="formal.html">Formal Events</a></li>
-                    <li><a href="Informal.html">Informal Events</a></li>
-                    <!-- <li><a href="contact.html">Contacts</a></li> -->
-                    <li><a href="sponsors.html">SPONSORS</a></li>
-                    <li class="active"><a href="team.html">Team</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="formal.html">Formal Events</a></li>
+                        <li><a href="Informal.html">Informal Events</a></li>
+                        <li><a href="workshop.html">Workshops</a></li>
+                        <!-- <li><a href="contact.html">Contacts</a></li></li>> -->
+                        <li><a href="sponsors.html">SPONSORS</a></li>
+                        <li class="active"><a  href="team.html">Team</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -137,7 +138,7 @@
                     data-aos-delay="500">
                     <div class="testimony text-center">
                         <figure>
-                            <img src="https://axios.iiitl.ac.in/wings/competitiveCoding/images/team/nishant.jpg"
+                            <img src="images/nishant.jpg"
                                 alt="Image" class="img-fluid">
                         </figure>
                         <blockquote>
@@ -160,8 +161,8 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="formal.html">Formal Events</a></li>
-                        <li class="active"><a href="Informal.html">Informal Events</a></li>
-                        <!-- <li><a href="contact.html">Contacts</a></li> -->
+                        <li><a href="Informal.html">Informal Events</a></li>
+                        <li><a href="workshop.html">Workshops</a></li>
                         <li><a href="sponsors.html">SPONSORS</a></li>
                         <li><a href="team.html">Team</a></li>
                     </ul>
