--- a/mobile/workshop.html
+++ b/mobile/workshop.html
@@ -164,9 +164,9 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li class="active"><a href="formal.html">Formal Events</a></li>
+                <li><a href="formal.html">Formal Events</a></li>
                 <li><a href="Informal.html">Informal Events</a></li>
-                <li><a href="workshop.html">Workshops</a></li>
+                <li class="active"><a  href="workshop.html">Workshops</a></li>
                 <!-- <li><a href="contact.html">Contacts</a></li></li>> -->
                 <li><a href="sponsors.html">SPONSORS</a></li>
                 <li><a href="team.html">Team</a></li>
@@ -187,13 +187,13 @@
           <!-- <h1 style="background: linear-gradient(to right, #c70039, #ff5733 70%);-webkit-text-fill-color: transparent;-webkit-background-clip: text;"class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">&nbsp;Formal Events</h1> -->
         <h1
           style=" margin-left:4%;background: linear-gradient(to right, #c70039, #ff5733 70%);-webkit-text-fill-color: transparent;-webkit-background-clip: text;"
-          class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Formal Events</h1></div>
+          class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Workshops</h1></div>
       </div>
     <!-- </div> -->
   <!-- </div> -->
 
   <div class="informals" id="informals">
-    <div style="background: url(images/hackofiesta.png);    background-color: black;background-size: cover;"class="container">
+    <div style="background: url(images/workshops/shop1.png);    background-color: black;background-size: cover;"class="container">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -209,7 +209,7 @@
         </div>
       </div>
     </div>
-    <div   style="background: url(images/dream_in_code.png);    background-color: black;background-size: cover;" class="container">
+    <div   style="background: url(images/workshops/shop2.png);    background-color: black;background-size: cover;" class="container">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -225,7 +225,7 @@
         </div>
       </div>
     </div>
-    <div  style="background: url(images/incognito.png);    background-color: black;background-size: cover;" class="container">
+    <div  style="background: url(images/workshops/shop3.png);    background-color: black;background-size: cover;" class="container">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -241,7 +241,7 @@
         </div>
       </div>
     </div>
-    <div style="background: url(images/freshers_cup.png);    background-color: black;background-size: cover;" class="container">
+    <!-- <div style="background: url(images/freshers_cup.png);    background-color: black;background-size: cover;" class="container">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -256,7 +256,7 @@
           <span>More information</span>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 <footer class="site-footer">
   <div class="container">
@@ -267,7 +267,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="formal.html">Formal Events</a></li>
-          <li><a href="Informal.html">Informal Events</a></li>
+          <li ><a href="Informal.html">Informal Events</a></li>
           <li><a href="workshop.html">Workshops</a></li>
           <li><a href="sponsors.html">SPONSORS</a></li>
           <li><a href="team.html">Team</a></li>
