--- a/mobile/Informal.html
+++ b/mobile/Informal.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
   <!-- <link rel="stylesheet" href="assets/css/formal-events.css">  -->
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png"> -->
   <link rel="stylesheet" href="./css/style.css">
   <style>
     .informals {
@@ -31,7 +32,6 @@
       width: 300px;
       height: 400px;
       margin: 20px;
-      background: url("../assets/img/COMING (1).png");
       background-color: black;
       background-size: cover;
       cursor: pointer;
@@ -164,8 +164,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
-                <li  class="active"><a href="Informal.html">Informal Events</a></li>
-                <!-- <li><a href="contact.html">Contacts</a></li> -->
+                <li class="active"><a href="Informal.html">Informal Events</a></li>
+                <li><a href="workshop.html">Workshops</a></li>
+                <!-- <li><a href="contact.html">Contacts</a></li></li>> -->
                 <li><a href="sponsors.html">SPONSORS</a></li>
                 <li><a href="team.html">Team</a></li>
               </ul>
@@ -182,17 +183,34 @@
   <!-- <div  class="container"> -->
   <div " class=" row align-items-center">
     <div class="col-md-10">
-      <span class="d-block mb-3 caption" data-aos="fade-up">&nbsp;&nbsp;&nbsp;Events</span>
+      <span class="d-block mb-3 caption" data-aos="fade-up">&nbsp;&nbsp; &nbsp;&nbsp;Events</span>
       <h1
         style=" margin-left:4%;background: linear-gradient(to right, #c70039, #ff5733 70%);-webkit-text-fill-color: transparent;-webkit-background-clip: text;"
         class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Informal Events</h1>
     </div>
   </div>
   <!-- </div> -->
-  <!-- </div> -->
+  <!-- </div>style="background-image: url("images/code_arena.png");" -->
 
   <div class="informals" id="informals">
-    <div class="container">
+    <div style="background: url(images/code_arena.png);    background-color: black;background-size: cover;" class="container">
+      <div class="overlay">
+        <div class="items"></div>
+        <div  class="items head">
+          <p>Equinox</p>
+          <hr>
+        </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+    <div class="container"
+      style="background: url(images/code_byte.png);    background-color: black;background-size: cover;">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -208,7 +226,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div style="background: url(images/gamenight.png);    background-color: black;background-size: cover;" class="container">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -224,7 +242,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div style="background: url(images/quickfingers.png);    background-color: black;background-size: cover;" class="container">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -240,55 +258,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="overlay">
-        <div class="items"></div>
-        <div class="items head">
-          <p>Equinox</p>
-          <hr>
-        </div>
-        <div class="items price">
-          <p class="new">Timings</p>
-        </div>
-        <div class="items cart">
-          <i class="fas fa-info" aria-hidden="true"></i>
-          <span>More information</span>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="overlay">
-        <div class="items"></div>
-        <div class="items head">
-          <p>Equinox</p>
-          <hr>
-        </div>
-        <div class="items price">
-          <p class="new">Timings</p>
-        </div>
-        <div class="items cart">
-          <i class="fas fa-info" aria-hidden="true"></i>
-          <span>More information</span>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="overlay">
-        <div class="items"></div>
-        <div class="items head">
-          <p>Equinox</p>
-          <hr>
-        </div>
-        <div class="items price">
-          <p class="new">Timings</p>
-        </div>
-        <div class="items cart">
-          <i class="fas fa-info" aria-hidden="true"></i>
-          <span>More information</span>
-        </div>
-      </div>
-    </div>
-    <div class="container">
+    <div style="background: url(images/tech_hunt.png);    background-color: black;background-size: cover;" class="container">
       <div class="overlay">
         <div class="items"></div>
         <div class="items head">
@@ -311,15 +281,15 @@
       <div class="row mb-5">
         <div class="col-md-3 ml-auto">
           <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
-          <ul class="list-unstyled">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="formal.html">Formal Events</a></li>
-            <li  class="active"><a href="Informal.html">Informal Events</a></li>
-            <!-- <li><a href="contact.html">Contacts</a></li> -->
-            <li><a href="sponsors.html">SPONSORS</a></li>
-            <li><a href="team.html">Team</a></li>
-          </ul>
+            <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="formal.html">Formal Events</a></li>
+              <li><a href="Informal.html">Informal Events</a></li>
+              <li><a href="workshop.html">Workshops</a></li>
+              <li><a href="sponsors.html">SPONSORS</a></li>
+              <li><a href="team.html">Team</a></li>
+            </ul>
         </div>
         <div class="col-md-4">
           <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
