--- a/mobile/about.html
+++ b/mobile/about.html
@@ -14,7 +14,25 @@
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="css/aos.css">
-
+<link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/img/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/img/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="assets/img/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="assets/img/favicon/favicon.ico" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -49,13 +67,13 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About Us</a></li>
+                <li class="active"><a  href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
                 <li><a href="Informal.html">Informal Events</a></li>
-                <!-- <li><a href="contact.html">Contacts</a></li> -->
-                <li ><a href="sponsors.html">SPONSORS</a></li>
+                <li><a href="workshop.html">Workshops</a></li>
+                <!-- <li><a href="contact.html">Contacts</a></li></li>> -->
+                <li><a href="sponsors.html">SPONSORS</a></li>
                 <li><a href="team.html">Team</a></li>
-                <!-- <li><a href="team.html">Team</a></li> -->
               </ul>
             </nav>
           </div>
@@ -132,15 +150,15 @@
         <div class="row mb-5">
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
-            <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="formal.html">Formal Events</a></li>
-              <li class="active"><a href="Informal.html">Informal Events</a></li>
-              <!-- <li><a href="contact.html">Contacts</a></li> -->
-              <li><a href="sponsors.html">SPONSORS</a></li>
-              <li><a href="team.html">Team</a></li>
-            </ul>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="formal.html">Formal Events</a></li>
+            <li><a href="Informal.html">Informal Events</a></li>
+            <li><a href="workshop.html">Workshops</a></li>
+            <li><a href="sponsors.html">SPONSORS</a></li>
+            <li><a href="team.html">Team</a></li>
+          </ul>
           </div>
           <div class="col-md-4">
             <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
