--- a/mobile/index.html
+++ b/mobile/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="./css/bitsbybits.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="./css/cube.css">
   </head>
   <body>
@@ -52,11 +53,12 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li  class="active"><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
                 <li><a href="Informal.html">Informal Events</a></li>
-                <!-- <li><a href="contact.html">Contacts</a></li> -->
+                <li><a href="workshop.html">Workshops</a></li>
+                <!-- <li><a href="contact.html">Contacts</a></li></li>> -->
                 <li><a href="sponsors.html">SPONSORS</a></li>
                 <li><a href="team.html">Team</a></li>
                 <!-- <li><a href="team.html">Team</a></li> -->
@@ -726,8 +728,8 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="formal.html">Formal Events</a></li>
-              <li class="active"><a href="Informal.html">Informal Events</a></li>
-              <!-- <li><a href="contact.html">Contacts</a></li> -->
+              <li><a href="Informal.html">Informal Events</a></li>
+              <li><a href="workshop.html">Workshops</a></li>
               <li><a href="sponsors.html">SPONSORS</a></li>
               <li><a href="team.html">Team</a></li>
             </ul>
