--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
               <div
                 class="container"
                 id="hackofiesta"
-                style="background: url(./assets/img/events/Hackofiesta.png );    background-color: black;background-size: contain;"
+                style="background: url(assets/img/workshops/HACK-O-FIESTA.png); background-color: black;background-size: cover;background-repeat: no-repeat"
               >
                 <div class="overlay">
                   <div class="items"></div>
@@ -1172,13 +1172,20 @@
           >
           <span class="panel__nav panel__nav--up" style="opacity: 1;"
             >Follow us on Social Media:
-            <a href="https://www.facebook.com/Equinox-IIIT-Lucknow-106395987502181/?modal=admin_todo_tour" target="blank">
+            <a
+              href="https://www.facebook.com/Equinox-IIIT-Lucknow-106395987502181/?modal=admin_todo_tour"
+              target="blank"
+            >
               <i class="fab fa-facebook-square"></i
             ></a>
             <a href="https://twitter.com/Equinoxiiitl?s=08" target="blank"
               ><i class="fab fa-twitter-square"></i
             ></a>
-            <a href="https://www.linkedin.com/company/equinox-iiitl/about" target="blank"><i class="fab fa-linkedin"></i></a>
+            <a
+              href="https://www.linkedin.com/company/equinox-iiitl/about"
+              target="blank"
+              ><i class="fab fa-linkedin"></i
+            ></a>
           </span>
           <span class="panel__nav panel__nav--down js-down">Main</span>
           <div
