contact link added(mobile)

--- a/mobile/team.html
+++ b/mobile/team.html
@@ -89,6 +89,11 @@
                             <p class="author mb-0">Divy Khare</p>
 
                             <p>FESTIVAL LEAD</p>
+                           
+                                <a href="mailto:lit2017001@iiitl.ac.in"><i class="far fa-envelope" aria-hidden="true"></i><img style="border-radius: 100%;height: 30px;width: 30px;" src="images/mail.png" alt=""></i></a>&nbsp;
+                                <a href="tel:+918094123615"><i class="fas fa-phone-alt" aria-hidden="true"><img style="border-radius: 100%;height: 30px;width: 30px;"src="images/phone.jpg" alt=""></i></a>&nbsp;
+                                <a href="https://www.linkedin.com/in/divy-khare-63a398172/"><i class="fab fa-linkedin" aria-hidden="true"><img style="border-radius: 100%;height: 30px;width: 30px;" src="images/link.jpg" alt=""></i></a>&nbsp;
+                            <!-- </div> -->
                         </blockquote>
                     </div>
                 </div>
@@ -103,6 +108,12 @@
                             <p class="author mb-0">Govind Dixit</p>
 
                             <p>FESTIVAL LEAD</p>
+                            <a href="mailto:lit2017018@iiitl.ac.in"><i class="far fa-envelope" aria-hidden="true"></i><img
+                                    style="border-radius: 100%;height: 30px;width: 30px;" src="images/mail.png" alt="mail"></i></a>&nbsp;
+                            <a href="tel:+918094123615"><i class="fas fa-phone-alt" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/phone.jpg" alt="phone"></i></a>&nbsp;
+                            <a href="https://www.linkedin.com/in/govind-dixit-58708413a/"><i class="fab fa-linkedin" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/link.jpg" alt="linkedin"></i></a>&nbsp;
                         </blockquote>
                     </div>
                 </div>
@@ -117,6 +128,12 @@
                             <p class="author mb-0">Vaibhav Gupta</p>
 
                             <p>FESTIVAL LEAD</p>
+                            <a href="mailto:lit2017006@iiitl.ac.in"><i class="far fa-envelope" aria-hidden="true"></i><img
+                                    style="border-radius: 100%;height: 30px;width: 30px;" src="images/mail.png" alt=""></i></a>&nbsp;
+                            <a href="tel:+918094123615"><i class="fas fa-phone-alt" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/phone.jpg" alt=""></i></a>&nbsp;
+                            <a href="https://www.linkedin.com/in/vaibhavgupta79/"><i class="fab fa-linkedin" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/link.jpg" alt=""></i></a>&nbsp;
                         </blockquote>
                     </div>
                 </div>
@@ -131,6 +148,12 @@
                             <p class="author mb-0">Saksham Varshney</p>
 
                             <p>FESTIVAL COORDINATOR</p>
+                            <a href="mailto:lit2018029@iiitl.ac.in"><i class="far fa-envelope" aria-hidden="true"></i><img
+                                    style="border-radius: 100%;height: 30px;width: 30px;" src="images/mail.png" alt=""></i></a>&nbsp;
+                            <a href="tel:+918094123615"><i class="fas fa-phone-alt" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/phone.jpg" alt=""></i></a>&nbsp;
+                            <a href="https://www.linkedin.com/in/saksham-varshney-668ba557/"><i class="fab fa-linkedin" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/link.jpg" alt=""></i></a>&nbsp;
                         </blockquote>
                     </div>
                 </div>
@@ -145,6 +168,12 @@
                             <p class="author mb-0">Nishant Raj Lather</p>
 
                             <p>FESTIVAL COORDINATOR</p>
+                            <a href="mailto:lit2018038@iiitl.ac.in"><i class="far fa-envelope" aria-hidden="true"></i><img
+                                    style="border-radius: 100%;height: 30px;width: 30px;" src="images/mail.png" alt=""></i></a>&nbsp;
+                            <a href="tel:+918094123615"><i class="fas fa-phone-alt" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/phone.jpg" alt=""></i></a>&nbsp;
+                            <a href="https://www.linkedin.com/in/nishant-raj-lather-9542b5123/"><i class="fab fa-linkedin" aria-hidden="true"><img
+                                        style="border-radius: 100%;height: 30px;width: 30px;" src="images/link.jpg" alt=""></i></a>&nbsp;
                         </blockquote>
                     </div>
                 </div>
